category api gateway finished
